# hermit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  initPrompt.md  pyproject.toml  一键唤醒隐士.bat
.github/workflows/: ci.yml
assets/: README.md  checksums.sha256  manifest.json
assets/config/: config.example.json  runtime.example.json
docs/: docx-skill-contract.md  installation.md  open-source-release.md  troubleshooting.md
docs/prompts/: safe-docx-skill-prompt.md
docs/superpowers/plans/: 2026-06-05-hermit-bootstrap.md
hermit_skills/: __init__.py  docx_processor.py
scripts/: collect-logs.ps1  configure.ps1  install.ps1  prepare-assets.ps1  test-api.ps1  test-hermes-wechat.ps1  verify-assets.ps1
tests/: api-test-tests.ps1  configure-tests.ps1  hermes-gateway-tests.ps1  install-bootstrap-tests.ps1  prepare-assets-tests.ps1  test_docx_processor.py  verify-assets-tests.ps1
