[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermit-local"
version = "0.1.0"
description = "Offline-friendly Windows local automation toolkit for safe AI-assisted docx workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Hermit contributors" }
]
keywords = ["windows", "offline", "docx", "automation", "ai-agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business",
  "Topic :: Security"
]
dependencies = [
  "python-docx>=1.1,<2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9"
]

[tool.setuptools.packages.find]
include = ["hermit_skills*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

